Sat Aug 07 14:25:00 2004  Richard Frith-Macdonald  <rfm@gnu.org>

	* WebServer.m: Add session timeouts to kill off idle sessions.

Tue Jul 27 17:30:00 2004  Richard Frith-Macdonald  <rfm@gnu.org>

        * configure.ac: Give more help when postgres is not found.
	* configure: regenerate
		
Mon Jul 26 09:50:00 2004  Richard Frith-Macdonald  <rfm@gnu.org>

	* SQLClient.h: Add -transaction method and SQLTransaction class
	* SQLClient.m: Implement -transaction method and SQLTransaction class
	to provide a simple convenient mechanism for executing a sequence
	of statements as a single transaction.

Thu Jul 15 09:40:00 2004  Richard Frith-Macdonald  <rfm@gnu.org>

	* WebServer.m: ([_didRead:]) more informative logging upon reading
	an unexpected end-of-file

Wed Jul 14 12:07:00 2004  Richard Frith-Macdonald  <rfm@gnu.org>

	* configure.ac: Check for PQfformat in libpq, if it is not there
	but the library is there, warn that it is too old.

Thu Jul 02 17:40:00 2004  Richard Frith-Macdonald  <rfm@gnu.org>

	* WebServer.m: Add control over character encoding used to
	interpret form data.

Thu Jul 02 13:25:00 2004  Richard Frith-Macdonald  <rfm@gnu.org>

	* WebServer.m: Fix error response when an exception occurs.

Thu Jul 01 18:00:00 2004  Richard Frith-Macdonald  <rfm@gnu.org>

	* WebServer.m: Make ([setPort:secure:]) return a status.
	* WebServerBundles.m: Check that web server is able to start.
	* WebServer.h: ditto

Wed Jun 30 05:40:00 2004  Richard Frith-Macdonald  <rfm@gnu.org>

	* GNUmakefile: Use ./obj as location for library to link,
	for initial case where we link the bundles before installing
	the library.
	* WebServer.m: Add casts to prevent compiler warning.
	* Postgres.m: Commented out NSLog() left over from debugging.

Tue Jun 29 18:10:00 2004  Richard Frith-Macdonald  <rfm@gnu.org>

	* SQLClient.m: Fix code for retrieving reference name ... look in
	the config dictionary first, and in user defaults if not found
	there.
	* SQLClient.h: Document change.